--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,40 @@
+# ========================================
+# CONFIGURACIÓN BÁSICA DE LA APLICACIÓN
+# ========================================
 spring.application.name=transaction
-server.port=8086
+server.port=8080
 
+# ========================================
+# CONFIGURACIÓN DE BASE DE DATOS (PostgreSQL)
+# ========================================
 # Database configuration - misma BD que MS1 pero esquema diferente
-spring.datasource.url=jdbc:postgresql://banquito-postgres-db.cpuyauiewf97.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://banquito-postgres-db.cv8qkqyoig3i.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# ========================================
+# CONFIGURACIÓN DE JPA/HIBERNATE
+# ========================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=account
 
+# ========================================
+# CONFIGURACIÓN DE POOL DE CONEXIONES (HikariCP)
+# ========================================
 # Pool de conexiones (HikariCP) - misma configuración que MS1
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 
+# ========================================
+# CONFIGURACIÓN DE ACTIVEMQ (JMS)
+# ========================================
 # ActiveMQ configuration - exactamente igual que MS1
-spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://172.17.0.2:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
@@ -27,12 +42,17 @@ spring.activemq.password=admin
 spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=10
 
+# ========================================
+# CONFIGURACIÓN DE COLAS JMS
+# ========================================
 # Configuración de las tres colas separadas por tipo de transacción
 colas.deposito.queue-name=transacciones.deposito
 colas.retiro.queue-name=transacciones.retiro
 colas.transferencia.queue-name=transacciones.transferencia
 
-# Logging
+# ========================================
+# CONFIGURACIÓN DE LOGGING
+# ========================================
 logging.level.com.banquito=DEBUG
 logging.level.org.springframework.jms=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
