--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,21 @@
 # CONFIGURACIÓN BÁSICA DE LA APLICACIÓN
 # ========================================
 spring.application.name=transaction
-server.port=8080
+server.port=80
 
+app.version=1.0.0
 # ========================================
 # CONFIGURACIÓN DE BASE DE DATOS (PostgreSQL)
 # ========================================
-# Database configuration - misma BD que MS1 pero esquema diferente
+# Driver y URL de conexión
+spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/core
+# spring.datasource.username=postgres
+# spring.datasource.password=root
+
 spring.datasource.url=jdbc:postgresql://banquito-postgres-db.cv8qkqyoig3i.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ========================================
 # CONFIGURACIÓN DE JPA/HIBERNATE
@@ -34,9 +39,14 @@ spring.datasource.hikari.idle-timeout=30000
 # CONFIGURACIÓN DE ACTIVEMQ (JMS)
 # ========================================
 # ActiveMQ configuration - exactamente igual que MS1
-spring.activemq.broker-url=tcp://172.17.0.2:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
+spring.activemq.broker-url=ssl://b-0482f0d1-cc18-44b8-95b6-3ad4228a050c-1.mq.us-east-2.amazonaws.com:61617
+spring.activemq.user=arquitectura
+spring.activemq.password=arquitectura123456789
+
+# Usar conexiones seguras
+spring.activemq.packages.trust-all=true
+spring.activemq.in-memory=false
+spring.jms.cache.enabled=false
 
 # Pool de conexiones JMS - igual que MS1
 spring.activemq.pool.enabled=true
@@ -45,10 +55,28 @@ spring.activemq.pool.max-connections=10
 # ========================================
 # CONFIGURACIÓN DE COLAS JMS
 # ========================================
-# Configuración de las tres colas separadas por tipo de transacción
-colas.deposito.queue-name=transacciones.deposito
-colas.retiro.queue-name=transacciones.retiro
-colas.transferencia.queue-name=transacciones.transferencia
+# Nombres de colas específicas (solo 2 colas según reglas de negocio)
+colas.transacciones.deposito=transacciones.deposito
+colas.transacciones.retiro=transacciones.retiro
+
+# ========================================
+# CONFIGURACIÓN DE SWAGGER/OPENAPI
+# ========================================
+# Configuración de Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+
+# Configuración de grupos de API
+springdoc.group-configs[0].group=transacciones
+springdoc.group-configs[0].paths-to-match=/api/v1/transacciones/**
+springdoc.group-configs[1].group=sistema
+springdoc.group-configs[1].paths-to-match=/, /check
+
+# Configuración de ordenamiento
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
 
 # ========================================
 # CONFIGURACIÓN DE LOGGING
